--- a/src/ProductCard.css
+++ b/src/ProductCard.css
@@ -8,12 +8,13 @@
     border-radius: 10px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    width: 300px;
+    width: 350px;
   }
   .card-header img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    padding: 15px;
   }
   .card-body {
       display: flex;
@@ -31,7 +32,7 @@
   .user {
       display: flex;
       margin-top: auto;
-      font-size: 50px;
+      font-size: 40px;
   }
   .user a{
       color: black;
